tests/fixtures/errors/invalid_preproc_procedure_unsupported.puml
@startuml
!procedure Build()
A -> B: one
!endprocedure
@enduml
